# lights-out

./: Cargo.toml  README.md  build.rs  settings.toml
src/: controllers.rs  data.rs  formatters.rs  macros.rs  main.rs  settings.rs  view.rs  widgets.rs
src/solver/: clingo.rs  internal.rs  mod.rs  solver_trait.rs
