[package]
name = "lights_out"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.1"
derivative = "2.2.0"
derive_more = "0.99.17"
druid = "0.7.0"
lazy_static = "1.4.0"
regex = "1.5.4"
rand = "0.8.5"
itertools = "0.10.5"
strum = { version = "0.24", features = ["derive"] }
[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
